--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,13 +4,17 @@
     <item android:id="@+id/action_heart"
         android:icon="@drawable/heart"
         android:title="Today's Match"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="always" />
     <item android:id="@+id/circle_of_trust"
-          android:icon="@drawable/chat"
+          android:icon="@drawable/account_multiple_outline"
           android:title="Circle of Trust"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="always" />
     <item android:id="@+id/action_chat"
         android:icon="@drawable/chat"
         android:title="Past Matches"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="always" />
+    <item android:id="@+id/action_setting"
+          android:icon="@drawable/settings"
+          android:title="Settings"
+          android:showAsAction="always" />
 </menu>
